--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:30:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:31:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Hideki Matsuyama -2
 -2 thru 5</td>
       <td>Cameron Smith -2
@@ -163,7 +163,7 @@ E thru 17</td>
       <td>Talor Gooch -2
 -2 thru 8</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +4
@@ -193,7 +193,7 @@ E thru 17</td>
       <td>Cameron Smith(W) -2
 +2 thru 7</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris -1
@@ -207,7 +207,7 @@ E thru 17</td>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Corey Conners -1
@@ -223,9 +223,9 @@ E thru 17</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-5</td>
       <td>Tony Finau -2
--1 thru 4</td>
+-1 thru 5</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Will Zalatoris -1
 E thru 17</td>
       <td>Shane Lowry E
@@ -233,7 +233,7 @@ E thru 17</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 thru 17</td>
       <td class="greyout">Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -273,7 +273,7 @@ Missed Cut</td>
       <td>Dustin Johnson(W) -2
 +1 (F)</td>
       <td>Tony Finau -2
--1 thru 4</td>
+-1 thru 5</td>
       <td>Matthew Fitzpatrick E
 +1 thru 15</td>
       <td>Shane Lowry E
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris -1
@@ -335,7 +335,7 @@ E thru 17</td>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Corey Conners -1
@@ -351,7 +351,7 @@ E thru 17</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris -1
@@ -369,7 +369,7 @@ E thru 17</td>
       <td>Cameron Smith(W) -2
 +2 thru 7</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Shane Lowry E
 -1 thru 8</td>
       <td>Patrick Cantlay +1
@@ -389,7 +389,7 @@ E thru 17</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Marc Leishman +4
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -407,7 +407,7 @@ E thru 17</td>
       <td>Shane Lowry E
 -1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
     </tr>
@@ -417,7 +417,7 @@ E thru 17</td>
       <td>Cameron Smith(W) -2
 +2 thru 7</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Matthew Fitzpatrick E
 +1 thru 15</td>
       <td>Patrick Cantlay +1
@@ -433,7 +433,7 @@ E thru 17</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Adam Scott +1
@@ -463,7 +463,7 @@ Out With Injury</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Patrick Cantlay(W) +1
@@ -476,10 +476,26 @@ Out With Injury</td>
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele(W) +7
++5 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Patrick Cantlay +1
@@ -488,20 +504,20 @@ Out With Injury</td>
 -1 thru 17</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout">Rory McIlroy +3
-+2 thru 15</td>
+      <td class="greyout">Rory McIlroy +2
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Shane Lowry E
 -1 thru 8</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout">Jordan Spieth +4
@@ -511,7 +527,7 @@ Out With Injury</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-1</td>
       <td>Tony Finau -2
--1 thru 4</td>
+-1 thru 5</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Jon Rahm(W) +1
@@ -556,22 +572,6 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele(W) +7
-+5 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
@@ -581,7 +581,7 @@ E thru 17</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout">Xander Schauffele +7
@@ -591,7 +591,7 @@ E thru 17</td>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Patrick Cantlay +1
@@ -600,6 +600,22 @@ E thru 17</td>
 +1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -2
+-2 thru 5</td>
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Rory McIlroy(W) +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Tiger Woods +3
++4 thru 6</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -641,7 +657,7 @@ E thru 17</td>
       <td>Cameron Smith(W) -2
 +2 thru 7</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Brooks Koepka +4
@@ -677,9 +693,9 @@ E thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 15</td>
+-2 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 thru 16</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
     </tr>
@@ -693,27 +709,27 @@ E thru 17</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Cameron Smith -2
-+2 thru 7</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Rory McIlroy(W) +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+4 thru 6</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Rory McIlroy(W) +2
++1 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -725,27 +741,43 @@ E thru 17</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Justin Thomas +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++4 thru 6</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">3</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
+      <td>Scottie Scheffler -2
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Rory McIlroy(W) +3
-+2 thru 15</td>
+      <td>Justin Thomas(W) +2
+-2 thru 6</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -755,7 +787,7 @@ E thru 17</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -764,30 +796,30 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Tiger Woods(W) +3
-+4 thru 6</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout">Viktor Hovland +4
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Bubba Watson +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">3</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Will Zalatoris -1
 E thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +7
@@ -796,36 +828,20 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">4</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay +1
-+3 thru 17</td>
-      <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith -2
-+2 thru 7</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
-      <td>Bubba Watson +2
-+1 (F)</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Jordan Spieth +4
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -847,7 +863,7 @@ Missed Cut</td>
       <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Jon Rahm +1
@@ -869,7 +885,7 @@ Missed Cut</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
       <td class="greyout">Xander Schauffele +7
@@ -879,11 +895,11 @@ Missed Cut</td>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">5</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -892,18 +908,18 @@ Missed Cut</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
+      <td>Scottie Scheffler -2
++1 thru 5</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 16</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -915,7 +931,7 @@ E thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -931,13 +947,29 @@ E thru 17</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td>Tiger Woods +3
++4 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -947,7 +979,7 @@ E thru 17</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
       <td>Justin Thomas +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +4
@@ -956,16 +988,16 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">6</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Jon Rahm(W) +1
+      <td>Patrick Cantlay(W) +1
++3 thru 17</td>
+      <td>Jon Rahm +1
 -1 thru 17</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td>Viktor Hovland +4
-+4 thru 16</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
       <td class="greyout">Xander Schauffele +7
@@ -991,7 +1023,7 @@ E thru 17</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">7</td>
       <td>Scottie Scheffler -2
-+1 thru 4</td>
++1 thru 5</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
       <td>Viktor Hovland +4
@@ -1004,46 +1036,14 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td>Tiger Woods +3
-+4 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
-      <td>Patrick Cantlay(W) +1
-+3 thru 17</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
+-2 thru 6</td>
+      <td>Rory McIlroy +2
++1 thru 16</td>
       <td>Sam Burns +5
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
@@ -1057,7 +1057,7 @@ E thru 17</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
       <td>Justin Thomas +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td>Brooks Koepka +4
@@ -1073,7 +1073,7 @@ Missed Cut</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td>Brooks Koepka +4
@@ -1089,7 +1089,7 @@ Missed Cut</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Justin Thomas(W) +2
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td>Jordan Spieth +4
