--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:41:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:42:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,13 +143,13 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Tony Finau -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 17</td>
+E (F)</td>
       <td>Shane Lowry E
--1 thru 8</td>
+-1 thru 9</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -163,7 +163,7 @@ E thru 17</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Will Zalatoris -1
-E thru 17</td>
+E (F)</td>
       <td>Daniel Berger +1
 +2 thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
@@ -177,29 +177,13 @@ E thru 17</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Will Zalatoris -1
-E thru 17</td>
+E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 thru 16</td>
       <td>Shane Lowry E
--1 thru 8</td>
+-1 thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 5</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Shane Lowry E
--1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
@@ -223,7 +207,7 @@ E thru 17</td>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Corey Conners -1
@@ -252,16 +236,16 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
-      <td>Tony Finau -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 6</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Shane Lowry E
+-1 thru 9</td>
+      <td>Jon Rahm +2
+E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
@@ -284,16 +268,32 @@ E thru 17</td>
 +4 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
+      <td>Tony Finau -2
+-1 thru 5</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 17</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
       <td>Daniel Berger +1
 +2 thru 8</td>
+      <td>Jon Rahm +2
+E (F)</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +4
@@ -301,17 +301,17 @@ E thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Shane Lowry E
--1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
+-1 thru 9</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td>Justin Thomas(W) +2
 -2 thru 6</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 (F)</td>
     </tr>
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
+      <td>Jon Rahm +2
+E (F)</td>
       <td>Jordan Spieth(W) +4
 +2 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -365,13 +365,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
+      <td>Jon Rahm +2
+E (F)</td>
       <td>Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +6
@@ -381,11 +381,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
+      <td>Jon Rahm +2
+E (F)</td>
       <td>Patrick Reed +3
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
