--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:43:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:43:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -183,7 +183,7 @@ E (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -217,7 +217,7 @@ E (F)</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 (F)</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -236,22 +236,6 @@ E (F)</td>
 +4 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Tony Finau -2
--1 thru 5</td>
-      <td>Scottie Scheffler -2
-+1 thru 6</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -2
@@ -268,6 +252,22 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -2
++1 thru 6</td>
+      <td>Tony Finau -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Shane Lowry E
+-1 thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-4</td>
       <td>Hideki Matsuyama -3
@@ -282,22 +282,6 @@ Missed Cut</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Tony Finau -2
--1 thru 5</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 16</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -361,7 +345,7 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -377,7 +361,23 @@ E (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Tony Finau -1
+E thru 6</td>
+      <td>Matthew Fitzpatrick E
++1 thru 16</td>
+      <td>Shane Lowry E
+-1 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 17</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -391,7 +391,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -407,7 +407,7 @@ E (F)</td>
       <td>Adam Scott +1
 -1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka(W) +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -425,7 +425,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -489,7 +489,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -535,7 +535,7 @@ E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -567,25 +567,9 @@ E (F)</td>
       <td>Billy Horschel +3
 +1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Tony Finau -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -633,7 +617,7 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -650,6 +634,22 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Brian Harman +5
 +3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">1</td>
+      <td>Tony Finau -1
+E thru 6</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 17</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -679,7 +679,7 @@ E (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -697,7 +697,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -729,7 +729,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -775,7 +775,7 @@ E (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -821,7 +821,7 @@ E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
       <td>Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 17</td>
       <td class="greyout">Louis Oosthuizen
@@ -839,7 +839,7 @@ Missed Cut</td>
       <td>Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -873,7 +873,7 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -889,7 +889,7 @@ E (F)</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 (F)</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -919,7 +919,7 @@ E (F)</td>
       <td>Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -951,7 +951,7 @@ E (F)</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -985,7 +985,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -999,7 +999,7 @@ E (F)</td>
       <td>Justin Thomas +2
 -2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -1033,7 +1033,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -1047,7 +1047,7 @@ E (F)</td>
       <td>Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -1063,7 +1063,7 @@ E (F)</td>
       <td>Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
@@ -1093,7 +1093,7 @@ E (F)</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
       <td>Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 17</td>
       <td class="greyout">Louis Oosthuizen
