--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:43:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:43:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,35 +141,19 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler -2
 +1 thru 6</td>
-      <td>Tony Finau -2
--1 thru 5</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Tony Finau -1
+E thru 6</td>
       <td>Shane Lowry E
 -1 thru 9</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Tony Finau -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Daniel Berger +1
-+2 thru 8</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 6</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -185,7 +169,23 @@ E (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau -1
+E thru 6</td>
+      <td>Daniel Berger +1
++2 thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 6</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -233,7 +233,7 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -249,7 +249,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -263,17 +263,17 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Tony Finau -2
--1 thru 5</td>
+      <td class="bigbold">1</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
+      <td>Tony Finau -1
+E thru 6</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Jon Rahm(W) +2
@@ -281,7 +281,7 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -361,7 +361,7 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -391,7 +391,7 @@ E (F)</td>
       <td>Viktor Hovland(W) +4
 +4 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Luke List +7
 +2 thru 10</td>
     </tr>
